--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -17,4 +17,14 @@
 
 .scroll-content {
     border-top: 0 !important;
+    // margin-top: 66px !important;
+}
+
+.toolbar {
+    min-height: 65px !important;    
+}
+
+.toolbar-title {
+	font-size: 5vw;
+	font-weight: bold !important;
 }
