--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,6 +1,19 @@
 page-home {
+    .filter-space {
+        height: 56px !important;
+    }
+
+    h2 {
+        // font-size: 5vw !important;
+    }
+
+    p {
+        margin-top: 6px;
+        // font-size: 4vw !important;
+    }
+
     .importo {
         float: right;
-        font-size: 5vw;
+        font-size: 6vw;
     }
 }
