--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,11 +34,12 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
-  secondary:  #32db64,
-  danger:     #f53d3d,
-  light:      #f4f4f4,
-  dark:       #222
+	primary:    #4CAF50,
+	secondary:  #FFC107, // #FF9800 darker
+	danger:     #f53d3d,
+	light:      #f4f4f4,
+	dark:       #222,
+	lightPrimary: #C8E6C9
 );
 
 
