--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -35,11 +35,17 @@ $app-direction: ltr;
 
 $colors: (
 	primary:    #4CAF50,
+	lightPrimary: #C8E6C9,
 	secondary:  #FFC107, // #FF9800 darker
 	danger:     #f53d3d,
 	light:      #f4f4f4,
 	dark:       #222,
-	lightPrimary: #C8E6C9
+	menu:		#BDBDBD,
+	luce:		rgba(255, 193, 7, 0.5),
+	acqua:		rgba(3, 155, 229, 0.5),
+	gas:		rgba(244, 67, 54, 0.5),
+	internet:	rgba(67, 160, 71, 0.5),
+	rifiuti:	rgba(117, 117, 117, 0.5)	
 );
 
 
