--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,45 +1,54 @@
 // http://ionicframework.com/docs/theming/
-
-
-// App Global Sass
-// --------------------------------------------------
-// Put style rules here that you want to apply globally. These
-// styles are for the entire app and not just one component.
-// Additionally, this file can be also used as an entry point
-// to import other Sass files to be included in the output CSS.
-//
-// Shared Sass variables, which can be used to adjust Ionic's
-// default Sass variables, belong in "theme/variables.scss".
-//
-// To declare rules for a specific mode, create a child rule
-// for the .md, .ios, or .wp mode classes. The mode class is
-// automatically applied to the <body> element in the app.
-
-body, span, button, h1, h2, h3, h4, h5, h6, ion-item, ion-title, ion-label, ion-refresher {
+body, span, button, ion-item, ion-title, ion-label, ion-refresher, div.alert-message {
     font-family: ComingSoon;
 }
 
-.item h1, .item h2 {
-    margin-top: 0 !important;
-}
-
-// .content {
-//     background: url('../assets/imgs/notebook.jpeg') no-repeat center fixed;
-// 	background-size: cover;
-// }
-
-.scroll-content {
-    border-top: 0 !important;
-    // margin-top: 66px !important;
-}
-
-.toolbar {
-    min-height: 65px !important;    
-}
-
 .toolbar-title {
-	font-size: 5vw;
-	font-weight: bold !important;
+    font-size: 5vw;
+    font-weight: bold;
+}
+
+.menu-inner {
+    // .scroll-content, .list, .item {
+    //     background-color: color($colors, lightPrimary);
+    // }
+    font-family: ComingSoon;
+
+    .list {
+        margin-top: 2vh;
+        .item {
+            // color: #757575;
+            
+            background-color: #4caf50;
+            background-color: rgba(76, 175, 80, 0.8);
+            margin: 0 0 1vh 4vw;
+            padding: 1vh 0 1vh 10vw;
+            border-radius: 20px;
+
+            .label {
+                font-weight: bold;
+                font-size: 5vw;
+                color: color($colors, light);
+            }
+        }
+    }
+}
+
+.ion-page {
+    font-family: ComingSoon;
+
+    .scroll-content {
+        border-top: 0 !important;
+        // margin-top: 66px !important;
+    }
+
+    .item h1, .item h2 {
+        margin-top: 0 !important;
+    }
+    
+    .bar-button {
+        margin-right: 15px;
+    }
 }
 
 @font-face {
