--- a/src/app/app.html
+++ b/src/app/app.html
@@ -6,10 +6,16 @@
 	</ion-header>
 
 	<ion-content>
-		<ion-list no-lines>
+		<ion-list no-lines class="pages">
 			<ion-item menuClose *ngFor="let p of pages" (click)="openPage(p)">
 				<ion-icon name="{{ p.icon }}" item-start color="light" large></ion-icon>
 				{{ p.title }}
+			</ion-item>
+		</ion-list>
+		<ion-list no-lines class="exit">
+			<ion-item menuClose (click)="logout()">
+				<ion-icon name="exit" item-start color="light" large></ion-icon>
+				Logout
 			</ion-item>
 		</ion-list>
 	</ion-content>
