--- a/src/pages/storico/storico.scss
+++ b/src/pages/storico/storico.scss
@@ -1,8 +1,8 @@
 page-storico {
-    .list:first-of-type .list-header {
-        border-top: 0;
-        margin-bottom: 0;
-    }
+    // .list:first-of-type .list-header {
+    //     border-top: 0;
+    //     margin-bottom: 0;
+    // }
 
     .bollette {
         .importo {
